# ChangeLog for media-libs/mesa
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.313 2011/02/14 23:24:36 xarthisius Exp $

  14 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> mesa-7.9.1.ebuild:
  ppc stable wrt #344827, #354237

  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> mesa-7.9.ebuild:
  alpha/ia64/sh/sparc stable wrt #344827

  12 Feb 2011; Christian Faulhammer <fauli@gentoo.org> mesa-7.9.1.ebuild:
  stable x86, bug 354237

  12 Feb 2011; Markos Chandras <hwoarang@gentoo.org> mesa-7.9.1.ebuild:
  Stable on amd64 wrt bug #354237

*mesa-7.10-r1 (09 Feb 2011)

  09 Feb 2011; Magnus Granberg <zorry@gentoo.org> -mesa-7.10.ebuild,
  +mesa-7.10-r1.ebuild, +files/glx_ro_text_segm.patch:
  Fix bug 240956 readonly text segment on x86

  27 Jan 2011; Jeremy Olexa <darkside@gentoo.org> mesa-7.10.ebuild:
  Push Gentoo Prefix changes from x11 overlay, as approved

*mesa-7.10 (12 Jan 2011)

  12 Jan 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +mesa-7.10.ebuild, +files/eselect-mesa.conf.7.10:
  Version bump, bug #351094

*mesa-7.9.1 (08 Jan 2011)

  08 Jan 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -mesa-7.9-r1.ebuild, +mesa-7.9.1.ebuild,
  -files/mesa-7.9-libdrm-2.4.23-nouveau-api.patch:
  Version bump, bug #351094

  31 Dec 2010; Jeroen Roovers <jer@gentoo.org> mesa-7.9.ebuild:
  Stable for HPPA (bug #344827).

  29 Dec 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  files/eselect-mesa.conf.7.9:
  Fix copy&paste error

  29 Dec 2010; Markus Meier <maekke@gentoo.org> mesa-7.9.ebuild:
  arm stable, bug #344827

  25 Dec 2010; Christian Faulhammer <fauli@gentoo.org> mesa-7.9.ebuild:
  x86 stable, bug 344827

  23 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> mesa-7.9.ebuild:
  amd64 stable wrt #344827

  19 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> mesa-7.9.ebuild:
  ppc64 stable wrt #344827

*mesa-7.9-r1 (11 Dec 2010)
