@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/mesa
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.313 2011/02/14 23:24:36 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.314 2011/02/18 12:38:26 scarabeus Exp $
+
+  18 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org> -mesa-7.7.1.ebuild,
+  -mesa-7.8.2.ebuild:
+  Drop older overshadowed versions. 3 versions to choose from should be enough.
 
   14 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org> mesa-7.9.1.ebuild:
   ppc stable wrt #344827, #354237
